move manager service into single application

--- a/app/views/Tangram.ejs
+++ b/app/views/Tangram.ejs
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
             			<li><a href='/zcar/list' title=''>ZCar</a></li>
-			<li><a href='/todo/list' title=''>任务<br></a></li>
+			<li><a href='/todo/list' title=''>Todo</a></li>
 			<li><a href='/release/list' title=''>ZCarRelease</a></li>
 
           </ul>
@@ -77,57 +77,6 @@
 		<li>Gets start easily - all services are displayed in one view and simple.</li></ul></p>
 </div>
 <div class="col-md-12"><div class="row">
-<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T9/V1")) { %>
-	<div class="list-app">
-		<h3><span name="blurupdate" url="/T/update?Rid=4BC523J&Title=" contenteditable="true" orginal="Title4BC523J">Booking</span> <small>(T9.V1)</small> </h3>
-		<p name="Title4BC523J" class="hide" >Booking</p>
-		<small><a href="/booking/list">http://~/booking/list </a> </small> <br /> 
-		<p name="blurupdate" url="/T/update?Rid=4BC523J&Description=" contenteditable="true" orginal="Description4BC523J">Make reservation on<i> Integrity servers</i> (<b>SD2, DH, OA, VC, Kauai, Tiger, Sentosa, Coyote</b>) in Houston and China.</p>
-		<p name="Description4BC523J" class="hide" >Make reservation on<i> Integrity servers</i> (<b>SD2, DH, OA, VC, Kauai, Tiger, Sentosa, Coyote</b>) in Houston and China.</p>
-		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=4BC523J&format=json" title="Rebuild application[Booking] to active changes">Rebuild</a>
-			<a href="/T/show?Rid=4BC523J" title="View define detail of application[Booking]"><img class="icon15" src="/img/detail.png"></a>
-			<a href="/T/update?Rid=4BC523J" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
-			<a href="/T/update?Rid=4BC523J&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
-			<a href="/T/copy?Rid=4BC523J" title="Create a new one based on application[Booking]"><img class="icon15" src="/img/copy.png"></a>
-			<a name="remove" href="javascript:;" url="/T/remove?Rid=4BC523J" title="Remove application[Booking]"><img class="icon15" src="/img/remove.png"></a>
-		</div>
-	</div>
-<% } %>
-<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T9/V3")) { %>
-	<div class="list-app">
-		<h3><span name="blurupdate" url="/T/update?Rid=13BEJ2AU&Title=" contenteditable="true" orginal="Title13BEJ2AU">Booking3</span> <small>(T9.V3)</small> </h3>
-		<p name="Title13BEJ2AU" class="hide" >Booking3</p>
-		<small><a href="/booking3/list">http://~/booking3/list </a> </small> <br /> 
-		<p name="blurupdate" url="/T/update?Rid=13BEJ2AU&Description=" contenteditable="true" orginal="Description13BEJ2AU">Make reservation on<i> Integrity servers</i> (<b>SD2, DH, OA, VC, Kauai, Tiger, Sentosa, Coyote</b>) in Houston and China.</p>
-		<p name="Description13BEJ2AU" class="hide" >Make reservation on<i> Integrity servers</i> (<b>SD2, DH, OA, VC, Kauai, Tiger, Sentosa, Coyote</b>) in Houston and China.</p>
-		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=13BEJ2AU&format=json" title="Rebuild application[Booking3] to active changes">Rebuild</a>
-			<a href="/T/show?Rid=13BEJ2AU" title="View define detail of application[Booking3]"><img class="icon15" src="/img/detail.png"></a>
-			<a href="/T/update?Rid=13BEJ2AU" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
-			<a href="/T/update?Rid=13BEJ2AU&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
-			<a href="/T/copy?Rid=13BEJ2AU" title="Create a new one based on application[Booking3]"><img class="icon15" src="/img/copy.png"></a>
-			<a name="remove" href="javascript:;" url="/T/remove?Rid=13BEJ2AU" title="Remove application[Booking3]"><img class="icon15" src="/img/remove.png"></a>
-		</div>
-	</div>
-<% } %>
-<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T6/V1")) { %>
-	<div class="list-app">
-		<h3><span name="blurupdate" url="/T/update?Rid=3WCH4TG&Title=" contenteditable="true" orginal="Title3WCH4TG">Books</span> <small>(T6.V1)</small> </h3>
-		<p name="Title3WCH4TG" class="hide" >Books</p>
-		<small><a href="/books/list">http://~/books/list </a> </small> <br /> 
-		<p name="blurupdate" url="/T/update?Rid=3WCH4TG&Description=" contenteditable="true" orginal="Description3WCH4TG">读书</p>
-		<p name="Description3WCH4TG" class="hide" >读书</p>
-		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=3WCH4TG&format=json" title="Rebuild application[Books] to active changes">Rebuild</a>
-			<a href="/T/show?Rid=3WCH4TG" title="View define detail of application[Books]"><img class="icon15" src="/img/detail.png"></a>
-			<a href="/T/update?Rid=3WCH4TG" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
-			<a href="/T/update?Rid=3WCH4TG&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
-			<a href="/T/copy?Rid=3WCH4TG" title="Create a new one based on application[Books]"><img class="icon15" src="/img/copy.png"></a>
-			<a name="remove" href="javascript:;" url="/T/remove?Rid=3WCH4TG" title="Remove application[Books]"><img class="icon15" src="/img/remove.png"></a>
-		</div>
-	</div>
-<% } %>
 <% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("TB/V1")) { %>
 	<div class="list-app">
 		<h3><span name="blurupdate" url="/T/update?Rid=8II9UQ5&Title=" contenteditable="true" orginal="Title8II9UQ5">Issues</span> <small>(TB.V1)</small> </h3>
@@ -145,26 +94,9 @@
 		</div>
 	</div>
 <% } %>
-<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T3/V1")) { %>
-	<div class="list-app">
-		<h3><span name="blurupdate" url="/T/update?Rid=3N825D1&Title=" contenteditable="true" orginal="Title3N825D1">Links</span> <small>(T3.V1)</small> </h3>
-		<p name="Title3N825D1" class="hide" >Links</p>
-		<small><a href="/links/list">http://~/links/list </a> </small> <br /> 
-		<p name="blurupdate" url="/T/update?Rid=3N825D1&Description=" contenteditable="true" orginal="Description3N825D1">links</p>
-		<p name="Description3N825D1" class="hide" >links</p>
-		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=3N825D1&format=json" title="Rebuild application[Links] to active changes">Rebuild</a>
-			<a href="/T/show?Rid=3N825D1" title="View define detail of application[Links]"><img class="icon15" src="/img/detail.png"></a>
-			<a href="/T/update?Rid=3N825D1" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
-			<a href="/T/update?Rid=3N825D1&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
-			<a href="/T/copy?Rid=3N825D1" title="Create a new one based on application[Links]"><img class="icon15" src="/img/copy.png"></a>
-			<a name="remove" href="javascript:;" url="/T/remove?Rid=3N825D1" title="Remove application[Links]"><img class="icon15" src="/img/remove.png"></a>
-		</div>
-	</div>
-<% } %>
 <% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("TF0/V1")) { %>
 	<div class="list-app">
-		<h3><span name="blurupdate" url="/T/update?Rid=24A6M35&Title=" contenteditable="true" orginal="Title24A6M35">Roles</span> <small>(TF0.V1)</small> </h3>
+		<h3><small>[Hidden]</small><span name="blurupdate" url="/T/update?Rid=24A6M35&Title=" contenteditable="true" orginal="Title24A6M35">Roles</span> <small>(TF0.V1)</small> </h3>
 		<p name="Title24A6M35" class="hide" >Roles</p>
 		<small><a href="/roles/list">http://~/roles/list </a> </small> <br /> 
 		<p name="blurupdate" url="/T/update?Rid=24A6M35&Description=" contenteditable="true" orginal="Description24A6M35">用于定义系统内的用户角色已经相应的应用访问权限。</p>
@@ -178,20 +110,20 @@
 		</div>
 	</div>
 <% } %>
-<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T9/V2")) { %>
+<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T4/V1")) { %>
 	<div class="list-app">
-		<h3><span name="blurupdate" url="/T/update?Rid=55IF1LE&Title=" contenteditable="true" orginal="Title55IF1LE">Servers</span> <small>(T9.V2)</small> </h3>
-		<p name="Title55IF1LE" class="hide" >Servers</p>
-		<small><a href="/servers/list">http://~/servers/list </a> </small> <br /> 
-		<p name="blurupdate" url="/T/update?Rid=55IF1LE&Description=" contenteditable="true" orginal="Description55IF1LE">Define servers (SD2, DH, OA, VC, Kauai, Tiger, Sentosa, Coyote) in Houston and China to enable make reservation.</p>
-		<p name="Description55IF1LE" class="hide" >Define servers (SD2, DH, OA, VC, Kauai, Tiger, Sentosa, Coyote) in Houston and China to enable make reservation.</p>
+		<h3><span name="blurupdate" url="/T/update?Rid=16WRUTP&Title=" contenteditable="true" orginal="Title16WRUTP">Todo</span> <small>(T4.V1)</small> </h3>
+		<p name="Title16WRUTP" class="hide" >Todo</p>
+		<small><a href="/todo/list">http://~/todo/list </a> </small> <br /> 
+		<p name="blurupdate" url="/T/update?Rid=16WRUTP&Description=" contenteditable="true" orginal="Description16WRUTP">用于管理项目的各种属于我的事项。 </p>
+		<p name="Description16WRUTP" class="hide" >用于管理项目的各种属于我的事项。 </p>
 		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=55IF1LE&format=json" title="Rebuild application[Servers] to active changes">Rebuild</a>
-			<a href="/T/show?Rid=55IF1LE" title="View define detail of application[Servers]"><img class="icon15" src="/img/detail.png"></a>
-			<a href="/T/update?Rid=55IF1LE" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
-			<a href="/T/update?Rid=55IF1LE&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
-			<a href="/T/copy?Rid=55IF1LE" title="Create a new one based on application[Servers]"><img class="icon15" src="/img/copy.png"></a>
-			<a name="remove" href="javascript:;" url="/T/remove?Rid=55IF1LE" title="Remove application[Servers]"><img class="icon15" src="/img/remove.png"></a>
+			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=16WRUTP&format=json" title="Rebuild application[Todo] to active changes">Rebuild</a>
+			<a href="/T/show?Rid=16WRUTP" title="View define detail of application[Todo]"><img class="icon15" src="/img/detail.png"></a>
+			<a href="/T/update?Rid=16WRUTP" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
+			<a href="/T/update?Rid=16WRUTP&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
+			<a href="/T/copy?Rid=16WRUTP" title="Create a new one based on application[Todo]"><img class="icon15" src="/img/copy.png"></a>
+			<a name="remove" href="javascript:;" url="/T/remove?Rid=16WRUTP" title="Remove application[Todo]"><img class="icon15" src="/img/remove.png"></a>
 		</div>
 	</div>
 <% } %>
@@ -213,7 +145,7 @@
 <% } %>
 <% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("TF1/V1")) { %>
 	<div class="list-app">
-		<h3><span name="blurupdate" url="/T/update?Rid=25RFV24&Title=" contenteditable="true" orginal="Title25RFV24">Users</span> <small>(TF1.V1)</small> </h3>
+		<h3><small>[Hidden]</small><span name="blurupdate" url="/T/update?Rid=25RFV24&Title=" contenteditable="true" orginal="Title25RFV24">Users</span> <small>(TF1.V1)</small> </h3>
 		<p name="Title25RFV24" class="hide" >Users</p>
 		<small><a href="/users/list">http://~/users/list </a> </small> <br /> 
 		<p name="blurupdate" url="/T/update?Rid=25RFV24&Description=" contenteditable="true" orginal="Description25RFV24">Users in current system</p>
@@ -224,23 +156,6 @@
 			<a href="/T/update?Rid=25RFV24" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
 			<a href="/T/update?Rid=25RFV24&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
 			<a href="/T/copy?Rid=25RFV24" title="Create a new one based on application[Users]"><img class="icon15" src="/img/copy.png"></a>
-		</div>
-	</div>
-<% } %>
-<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("TA/V1")) { %>
-	<div class="list-app">
-		<h3><span name="blurupdate" url="/T/update?Rid=4BV5H6K&Title=" contenteditable="true" orginal="Title4BV5H6K">VMs</span> <small>(TA.V1)</small> </h3>
-		<p name="Title4BV5H6K" class="hide" >VMs</p>
-		<small><a href="/vms/list">http://~/vms/list </a> </small> <br /> 
-		<p name="blurupdate" url="/T/update?Rid=4BV5H6K&Description=" contenteditable="true" orginal="Description4BV5H6K">VM using by BCS team</p>
-		<p name="Description4BV5H6K" class="hide" >VM using by BCS team</p>
-		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=4BV5H6K&format=json" title="Rebuild application[VMs] to active changes">Rebuild</a>
-			<a href="/T/show?Rid=4BV5H6K" title="View define detail of application[VMs]"><img class="icon15" src="/img/detail.png"></a>
-			<a href="/T/update?Rid=4BV5H6K" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
-			<a href="/T/update?Rid=4BV5H6K&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
-			<a href="/T/copy?Rid=4BV5H6K" title="Create a new one based on application[VMs]"><img class="icon15" src="/img/copy.png"></a>
-			<a name="remove" href="javascript:;" url="/T/remove?Rid=4BV5H6K" title="Remove application[VMs]"><img class="icon15" src="/img/remove.png"></a>
 		</div>
 	</div>
 <% } %>
@@ -309,23 +224,6 @@
 			<a href="/T/update?Rid=3W8AQQW&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
 			<a href="/T/copy?Rid=3W8AQQW" title="Create a new one based on application[lend]"><img class="icon15" src="/img/copy.png"></a>
 			<a name="remove" href="javascript:;" url="/T/remove?Rid=3W8AQQW" title="Remove application[lend]"><img class="icon15" src="/img/remove.png"></a>
-		</div>
-	</div>
-<% } %>
-<% if (!request.u.apps || request.u.apps.contains("*") || request.u.apps.contains("T4/V1")) { %>
-	<div class="list-app">
-		<h3><span name="blurupdate" url="/T/update?Rid=16WRUTP&Title=" contenteditable="true" orginal="Title16WRUTP">任务<br></span> <small>(T4.V1)</small> </h3>
-		<p name="Title16WRUTP" class="hide" >任务<br></p>
-		<small><a href="/todo/list">http://~/todo/list </a> </small> <br /> 
-		<p name="blurupdate" url="/T/update?Rid=16WRUTP&Description=" contenteditable="true" orginal="Description16WRUTP">用于管理项目的各种属于我的事项。 </p>
-		<p name="Description16WRUTP" class="hide" >用于管理项目的各种属于我的事项。 </p>
-		<div class="text-right">
-			<a class="btn btn-xs" name="onemsg" href="javascript:;" url="/T/create?Rid=16WRUTP&format=json" title="Rebuild application[任务<br>] to active changes">Rebuild</a>
-			<a href="/T/show?Rid=16WRUTP" title="View define detail of application[任务<br>]"><img class="icon15" src="/img/detail.png"></a>
-			<a href="/T/update?Rid=16WRUTP" title="Edit Define"><img class="icon15" src="/img/edit.png"></a>
-			<a href="/T/update?Rid=16WRUTP&dl=layout" title="Edit Layout"><img class="icon15" src="/img/edit2.png"></a>
-			<a href="/T/copy?Rid=16WRUTP" title="Create a new one based on application[任务<br>]"><img class="icon15" src="/img/copy.png"></a>
-			<a name="remove" href="javascript:;" url="/T/remove?Rid=16WRUTP" title="Remove application[任务<br>]"><img class="icon15" src="/img/remove.png"></a>
 		</div>
 	</div>
 <% } %>
