--- a/app/service/admin/T_show.ejs
+++ b/app/service/admin/T_show.ejs
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
             			<li><a href='/zcar/list' title=''>ZCar</a></li>
-			<li><a href='/todo/list' title=''>任务<br></a></li>
+			<li><a href='/todo/list' title=''>Todo</a></li>
 			<li><a href='/release/list' title=''>ZCarRelease</a></li>
 
           </ul>
