--- a/app/service/admin/T_new.ejs
+++ b/app/service/admin/T_new.ejs
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
             			<li><a href='/zcar/list' title=''>ZCar</a></li>
-			<li><a href='/todo/list' title=''>Todo</a></li>
+			<li><a href='/todo/list' title=''>Unknown</a></li>
 			<li><a href='/release/list' title=''>ZCarRelease</a></li>
 
           </ul>
@@ -386,6 +386,20 @@
 				<% } %>
 			  </div>
 			<% } %>
+			</div>
+			</div></div>
+			
+			<div class='col-md-12'><div><label>Pagging</label>
+			<div class='input-group'>
+			<div class='col-md-auto'>
+				<select name='Pagging' class='input-sm'>
+					<option value=100 <%= (!data["Pagging"]) ? "selected=true" : "" %> > NO Pagging</option>
+					<option value=10  <%= (10 == data["Pagging"]) ? "selected=true" : "" %> >10/page</option>
+					<option value=20  <%= (20 == data["Pagging"]) ? "selected=true" : "" %> >20/page</option>
+					<option value=50  <%= (50 == data["Pagging"]) ? "selected=true" : "" %> >50/page</option>
+					<option value=100 <%= (100 == data["Pagging"]) ? "selected=true" : "" %> >100/page</option>
+				</select>
+			  </div>
 			</div>
 			</div></div>
 			<div class='col-md-12'>
