--- a/app/views/T1XV1edit.ejs
+++ b/app/views/T1XV1edit.ejs
@@ -36,7 +36,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
             			<li class='active'><a href='/zcar/list' title=''>ZCar</a></li>
-			<li ><a href='/todo/list' title=''>Todo</a></li>
+			<li ><a href='/todo/list' title=''>Unknown</a></li>
 			<li ><a href='/release/list' title=''>ZCarRelease</a></li>
 
           </ul>
@@ -121,7 +121,7 @@
 </div><div class="col-md-12">		<div><label class='control-label title-label'>Bug信息</label><div class='controls'>
 <textarea class='form-control richtext' name='F12'  rows=5 placeholder='出现bug对应的详细记录'><%= data["F12"] || "" %></textarea></div><span class='errormsg'>bug的等级，描述，对应状态，或者是bug的链接</span></div>
 </div>
-                                                  <div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
+                                                   <div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
 <div class="col-md-0"><button type="submit" class="btn btn-primary"    style="min-width:80px;" title="">Save Changes </button></div>
 <div class="col-md-0"><a class="btn btn-link"  href="/zcar/list" style="min-width:80px;" title="">Cancel</a></div>
 </div></div>
