--- a/app/service/admin/T_show.ejs
+++ b/app/service/admin/T_show.ejs
@@ -202,6 +202,13 @@
 				  </div>
 				</div>
 				</div></div>
+				<div class='col-md-12'><div><label>Summary</label>
+				<div class='input-group'>
+				<div class='col-md-auto'>
+					<%= (data["Counting"]) ? data["Counting"] : "NO Summary" %>
+				  </div>
+				</div>
+				</div></div>
 				<div class='col-md-12'><%- data["Footer"] || "" %></div>
 					
 			</div>
