--- a/app/service/admin/T_new.ejs
+++ b/app/service/admin/T_new.ejs
@@ -1655,7 +1655,7 @@ refreshAS();
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2016
+		Created by <a href="https://github.com/ItManTos/Tangrammy/">Tangrammy 0.3.0</a> at 2017. <a target="_blank" href="http://mail.tangrammy.com/feedback">意见反馈  </a> 
 	</div>
 </div>
 </footer>
